Changes for the image api